[package]
name = "lumi-ai"
version = "3.0.0"
description = "Your friendly AI chatbot powered by Gemini"
authors = ["iamlooper"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lumi_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
tokio = { version = "1", features = ["net", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

